# rmq-in-rust-example

./: Cargo.toml  Makefile  README.md
src/: main.rs
