[package]
name = "rmq-in-rust-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
warp = "0.2"
futures = { version = "0.3", default-features = false }
tokio-amqp = "0.1.0"
lapin = "1.0.0"
deadpool-lapin = { git = "https://github.com/bikeshedder/deadpool" }
deadpool = { git = "https://github.com/bikeshedder/deadpool" }
thiserror = "1.0.15"
