[package]
name = "rmq-in-rust-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["macros", "time", "rt-multi-thread"] }
warp = "0.3.1"
futures = { version = "0.3.17", default-features = true }
tokio-amqp = "1.0.0"
thiserror = "1.0.30"
deadpool = "0.9.0"
deadpool-lapin = "0.9.0"
lapin = "1.8.0"
